# validator-bridge-module

./: .env.example  Cargo.toml  README.md
.github/workflows/: pr.yml
raw-transaction-builder/: Cargo.toml
raw-transaction-builder/src/: cryptde.rs  lib.rs
res/: Contract.json  graph_node_all_account_messages.graphql  graph_node_all_accounts.graphql  graph_node_all_bridge_messages.graphql  graph_node_all_limit_messages.graphql  graph_node_all_messages.graphql  graph_node_all_validator_messages.graphql  graph_node_all_validators_list_messages.graphql  graph_node_max_block_number_of_account_messages.graphql  graph_node_max_block_number_of_bridge_messages.graphql  graph_node_max_block_number_of_limit_messages.graphql  graph_node_max_block_number_of_messages.graphql  graph_node_max_block_number_of_validator_messages.graphql  graph_node_max_block_number_of_validators_list_messages.graphql  graph_node_messages_by_status.graphql  graph_node_schema.graphql
res/contracts/: DAIContract.json
src/: config.rs  controller.rs  controller_storage.rs  ethereum_event_listener.rs  ethereum_transactions.rs  executor.rs  graph_node_event_listener.rs  main.rs  oracle.rs  substrate_event_listener.rs  substrate_transactions.rs
subgraph/: .gitignore  package.json  schema.graphql  subgraph.yaml
subgraph/abis/: Candidate.json  Contract.json  Dao.json  Limits.json  Status.json  Transfers.json  ValidatorsOperations.json
subgraph/src/: mapping.ts
