[package]
version = "0.2.1"
name = "validator"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.8.0"
tokio = "0.1.22"
tokio-threadpool = "0.1.15"
futures = "0.1.29"
rustc-hex = "2.0.1"
ethabi = "8.0.1"
log = "0.4.0"
env_logger = "0.6.2"
dotenv = "0.14.1"
graphql_client = "0.8.0"
reqwest = "0.9.22"
serde = "1.0.101"
time = "0.1.42"
failure_derive = "0.1.7"

node-runtime = { git = 'https://github.com/alekspickle/akropolisOS-chain-node.git', branch = 'v2.0.0-alpha.6', package = 'akropolisos-runtime' }

raw-transaction-builder = { path = 'raw-transaction-builder' }

substrate-bip39 = "0.3.1"
substrate-api-client = { features = ['full_crypto'], git = 'https://github.com/alekspickle/substrate-api-client.git', branch = 'v2.0.0-alpha.6', version = '2.0.0'}

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-babe'
version = '2.0.0-alpha.6'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
version = '2.0.0-alpha.6'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
version = '2.0.0-alpha.6'

[dependencies.primitives]
features = ["full_crypto"]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
version = '2.0.0-alpha.6'

[dependencies.keyring]
version = '2.0.0-alpha.6'
package = "sp-keyring"

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-runtime'
version = '2.0.0-alpha.6'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[dependencies.codec]
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"
default-features = false

