[package]
version = "0.2.1"
name = "validator"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

[dependencies]
web3 = "0.8.0"
tokio = "0.1.22"
tokio-threadpool = "0.1.15"
futures = "0.1.29"
rustc-hex = "2.0.1"
ethabi = "8.0.1"
log = "0.4.0"
env_logger = "0.6.2"
dotenv = "0.14.1"
graphql_client = "0.8.0"
reqwest = "0.9.22"
serde = "1.0.101"
serde_json = "1.0"
time = "0.1.42"
failure_derive = "0.1.7"

substrate-bip39 = { path = 'vendor/substrate-bip39' }
substrate-api-client = { path = 'vendor/substrate-api-client' }
raw-transaction-builder = { path = 'raw-transaction-builder' }

node-runtime = { git = 'https://github.com/akropolisio/akropolisos-chain-node', version = '1.0.1', package = 'akropolisos-runtime', branch = 'v1.0' }
#substrate-api-client = { git = 'https://github.com/akropolisio/substrate-api-client', version = '0.4.2', branch = 'custom_node' }

[dependencies.consensus]
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-consensus-aura'

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-consensus-authorities'

[dependencies.system]
default_features = false
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'srml-system'

[dependencies.balances]
default_features = false
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'srml-balances'

[dependencies.primitives]
default_features = false
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'substrate-primitives'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/akropolisio/substrate.git'
branch = 'v1.0_custom'
package = 'sr-primitives'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.5'

[patch.'https://github.com/paritytech/substrate-bip39']
substrate-bip39 = { path="vendor/substrate-bip39" }