[package]
version = "0.2.2"
name = "validator"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

[dependencies]
web3 = "0.8.0"
tokio = "0.1.22"
tokio-threadpool = "0.1.15"
futures = "0.1.29"
rustc-hex = "2.0.1"
ethabi = "8.0.1"
log = "0.4.0"
env_logger = "0.6.2"
dotenv = "0.14.1"
graphql_client = "0.8.0"
reqwest = "0.9.22"
serde = "1.0.101"
serde_json = "1.0"
time = "0.1.42"
failure_derive = "0.1.7"

raw-transaction-builder = { path = 'raw-transaction-builder' }

substrate-bip39 = "0.3.1"
node-runtime = { git = 'https://github.com/alekspickle/akropolisos-chain-node', version = '0.5.11', package = 'runtime', branch = 'aura' }
substrate-api-client = { git = 'https://github.com/akropolisio/substrate-api-client', version = '0.4.4', branch = 'custom_node_alpha.7' }

[dependencies.primitives]
features = ["full_crypto"]
package = 'sp-core'
version = '2.0.0-alpha.7'

[dependencies.runtime-primitives]
package = 'sp-runtime'
version = '2.0.0-alpha.7'

[dependencies.codec]
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"
default-features = false
